--- a/website/templates/issues_page.html
+++ b/website/templates/issues_page.html
@@ -1,31 +1,26 @@
 {% extends "base_page.html" %}
+{% load static %}
 {% block page_content %}
+<div class="row row-cols-1 row-cols-md-3 justify-content-center">
 {% for issue in content %}
-<div class="card mb-3">
-  <div class="row g-0">
-    <div class="col-md-4 p-3">
+<div class="col">
+  <div class="card mb-3" style="max-width: 30rem;">
       <a href="{% url 'issue_detail' issue.id %}">
-        <img src="{{ issue.cover.url }}" class="img-fluid rounded-start mx-auto d-block w-50" alt="Capa">
+        {% if issue.cover %}
+          <img src="{{ issue.cover.url }}" class="img-fluid border mt-3 rounded-start mx-auto d-block w-75" alt="Capa">
+        {% else %}
+          <img src="{% static 'img/placeholder/cover.png' %}" class="img-fluid border rounded-start mx-auto d-block w-75" alt="Capa">
+        {% endif %}
       </a>
-    </div>
-    <div class="col-md-8">
-      <div class="card-body">
+      <div class="card-body text-center">
         <h5 class="card-title">{{ issue.title }}</h5>
-        <div class="card-text">
-          {{ issue.presentation|safe }}
-          {% comment %}{{ issue.presentation|safe|slice:":500" }}{% endcomment %}
-          {% comment %}{% if issue.presentation|length > 500 %}...{% endcomment %}
-            {% comment %}<a href="{% url 'issue_detail' issue.id %}">Ler mais</a></div>{% endcomment %}
-          {% comment %}{% endif %}{% endcomment %}
-        </div>
         <p class="card-text"><small class="text-muted">Publicado em {{ issue.pub_date }}</small></p>
-        <a href="{{ issue.file.url }}" class="btn btn-primary" target="_blank">
-          <span class=" me-2"><i class="fas fa-download"></i></span>
-          PDF
+        <a href="{% url 'issue_detail' issue.id %}" class="btn btn-primary">
+          Detalhes
         </a>
       </div>
-    </div>
   </div>
 </div>
 {% endfor %}
+</div>
 {% endblock %}
