--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -36,7 +36,7 @@
           {% if publication.promo_image %}
           <img src="{{ publication.promo_image.url }}" class="img-fluid">
           {% else %}
-          <img src="https://placehold.co/600x400/png?text=Promo Image" class="img-fluid">
+          <img src="{% static 'img/placeholder/promo.png' %}" class="img-fluid">
           {% endif %}
         </figure>
       </div><!-- /.col-sm-6 -->
@@ -56,11 +56,11 @@
     <div class="row">
       <div class="col-sm-6 mx-auto">
         <figure>
-        {% if publication.promo_image %}
-        <img src="{{ publication.promo_image.url }}" class="img-fluid">
-        {% else %}
-        <img src="https://placehold.co/600x400/png?text=Promo Image" class="img-fluid">
-        {% endif %}
+          {% if publication.promo_image %}
+          <img src="{{ publication.promo_image.url }}" class="img-fluid">
+          {% else %}
+          <img src="{% static 'img/placeholder/promo.png' %}" class="img-fluid">
+          {% endif %}
         </figure>
       </div>
     </div>
