--- a/app/templates/issue_detail.html
+++ b/app/templates/issue_detail.html
@@ -19,13 +19,23 @@
     </div>
     <div class="col-md-4 p-3">
       <div>
+        {% if issue.file and issue.cover %}
         <a href="{{ issue.file.url }}">
           <img class="img-fluid border border-3 w-75 d-block mx-auto" src="{{ issue.cover.url }}" alt="Capa">
         </a>
+        {% else %}
+        <a href="#">
+          <img class="img-fluid border border-3 w-75 d-block mx-auto" src="{% static 'img/placeholder/cover.png' %}" alt="Capa">
+        </a>
+        {% endif %}
       </div>
       <div class="list-group py-4">
         <div class="list-group-item bg-dark mb-2">
+          {% if issue.file %}
           <a class="d-block text-light text-start text-decoration-none text-capitalize" href="{{ issue.file.url}}" target="_blank">
+          {% else %}
+          <a class="d-block text-light text-start text-decoration-none text-capitalize" href="#" disabled>
+          {% endif %}
             <span class=" me-2"><i class="fas fa-download"></i></span>
             Download
           </a>
