--- a/app/templates/issues_page.html
+++ b/app/templates/issues_page.html
@@ -9,7 +9,7 @@
         {% if issue.cover %}
           <img src="{{ issue.cover.url }}" class="img-fluid border mt-3 rounded-start mx-auto d-block w-75" alt="Capa">
         {% else %}
-          <img src="{% static 'img/placeholder/cover.png' %}" class="img-fluid border rounded-start mx-auto d-block w-75" alt="Capa">
+          <img src="{% static 'img/placeholder/cover.png' %}" class="img-fluid border mt-3 rounded-start mx-auto d-block w-75" alt="Capa">
         {% endif %}
       </a>
       <div class="card-body text-center">
