refatorando o front publico

--- a/app/templates/download_page.html
+++ b/app/templates/download_page.html
@@ -4,7 +4,7 @@
   {% for document in content %}
   <div class="list-group-item bg-dark mb-2">
     <a class="d-block text-light text-start text-decoration-none text-capitalize" href="{{ document.file.url }}" target="_blank">
-      <span class=" me-2"><i class="fas fa-download"></i></span>
+      <span class=" me-2"><i class="bi bi-download"></i></span>
       {{ document.title }} - Atualizado em: {{ document.updated_at }}
     </a>
   </div>
