--- a/app/templates/base_page.html
+++ b/app/templates/base_page.html
@@ -1,16 +1,18 @@
 {% extends 'public/base.html' %}
 {% load static i18n %}
 {% block title %} {{ page.title }} {% endblock title %}
-{% block bodyclass %}bg-black single-page{% endblock bodyclass %}
+
+{% block bodyclass %}single-page{% endblock bodyclass %}
+
+{% block page_header %}
+<header class="container pt-4">
+  <h2 class="section-title">{{ page.title }}</h2>
+</header>
+{% endblock %}
 
 {% block content %}
-<section class="section about bg-white">
+<section>
   <div class="container">
-    <div class="row">
-      <div class="col-md-12">
-        <h2 class="section-title">{{ page.title }}</h3>
-      </div>
-    </div>
     <div class="row">
       <div class="col-md-12">
         {% block page_content %}
