--- a/app/templates/issue_detail.html
+++ b/app/templates/issue_detail.html
@@ -36,7 +36,7 @@
           {% else %}
           <a class="d-block text-light text-start text-decoration-none text-capitalize" href="#" disabled>
           {% endif %}
-            <span class=" me-2"><i class="fas fa-download"></i></span>
+            <span class=" me-2"><i class="bi bi-download"></i></span>
             Download
           </a>
         </div>
