--- a/templates/public/base.html
+++ b/templates/public/base.html
@@ -22,24 +22,22 @@
 {% endif %}
   
   <!-- Bootstrap -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
   <!-- Google Font: Source Sans Pro -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700&display=fallback">
 
-  <!-- Font Awesome -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+  <!-- Bootstrap Icons -->
+  <link
+    rel="stylesheet"
+    href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
+    integrity="sha256-9kPW/n5nn53j4WMRYAxe9c1rCY96Oogo/MKSVdKzPmI="
+    crossorigin="anonymous"
+  />
   
-  <!-- Ionicons -->
-  <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
-
   {% block extrastyle %}{% endblock extrastyle %}
     
-  <!-- Expotec -->
-  <link rel="stylesheet" href="{% static 'css/variaveis.css' %}">
-
-  <link rel="stylesheet" href="{% static 'css/expotec.css' %}">
-
+  <!-- Local -->
   <link rel="stylesheet" href="{% static 'css/main.css' %}">
 
   {% if publication.logo_mini %}
@@ -57,23 +55,21 @@
   {% endif %}
 </head>
 
-<body data-spy="scroll" data-target="#site-nav" class="{% block bodyclass %}{% endblock bodyclass %}" >
-  <nav id="site-nav" class="navbar navbar-custom navbar-expand-md fixed-top">
+<body class="d-flex flex-column min-vh-100 {% block bodyclass %}{% endblock bodyclass %}" >
+  <nav id="site-nav" class="navbar navbar-expand-md fixed-top navbar-custom" data-bs-theme="dark">
     <div class="container">
       <!-- logo -->
       <div class="navbar-brand">
-        <a class="portal-logo" href="{% url 'index' %}">
+        <a class="portal-logo text-reset text-decoration-none" href="{% url 'index' %}">
           {% if publication.logo %}
           <img src="{{ publication.logo.url }}" alt="Logo">
           {% else %}
-          {{ publication.short_title }}
+          <h5>{{ publication.short_title }}</h5>
           {% endif %}
         </a>
       </div>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar-items" aria-controls="navbar-items" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon">
-          <i class="fas fa-bars text-light fs-1"></i>
-        </span>
+      <button class="navbar-toggler border border-0" type="button" data-bs-toggle="collapse" data-bs-target="#navbar-items" aria-controls="navbar-items" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbar-items">
         <ul class="navbar-nav ms-auto">
@@ -89,55 +85,50 @@
       </div>
     </div>
   </nav>
+
+  {% block page_header %}
+  {% endblock %}
+
+  <main class="container flex-grow-1 d-flex align-items-center mb-2" role="main">
   {% block content %}
   {% endblock content %}
+  </main>
 
-  {% if publication.backgroundimage_set.all.1 %}
-  <section id="facts" class="section facts bg-image text-center text-light fs-1" style="background: url('{{ publication.backgroundimage_set.all.1 }}') no-repeat center; background-size: cover;" >
-  {% else %}
-  <section id="facts" class="section facts bg-dark text-center text-light fs-1">
-  {% endif %}
+  <footer class="pt-5 text-bg-dark mt-auto align-items-bottom" data-bs-theme="dark">
     <div class="container">
       <div class="row">
-        <div class="col-sm-3">
-          <i class="ion-ios-home"></i>
-          <h4 class="section-header font-400">{{ publication.organization }}</h4>
-        </div>
-        <div class="col-sm-3">
-          <i class="ion-ios-telephone"></i>
-          <h4 class="section-header font-400">{{ publication.phone }}</h4>
-        </div>
-        <div class="col-sm-3">
-          <i class="ion-ios-location"></i>
-          <h4 class="font-400">{{ publication.address }}</h4>
-        </div>
-        <div class="col-sm-3">
-          <i class="ion-ios-email"></i>
-          <h4><a class="text-decoration-none font-400" href="mailto:{{ publication.email }}">{{ publication.email }}</a></h4>
-        </div>
-      </div><!-- row -->
-    </div><!-- container -->
-  </section>
-
-  <footer class="site-footer">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-12">
+        <div class="col-md-4">
+          <p class="mb-0"><strong>{{ publication.title }}</strong></p>
+          <p class="mb-0">{{ publication.organization }}</p>
           {% if publication.issn %}
-          <p class="site-info text-muted">{{ publication.title }}<br> <small>ISSN: {{ publication.issn }}</small></p>
+          <p><small>ISSN: {{ publication.issn }}</small></p>
           {% endif %}
-          <ul class="social-block">
+        </div>
+        <div class="col-md-5 ms-auto">
+          <p class="mb-0"><strong>Contato:</strong></p>
+          <p class="mb-0"><i class="bi bi-geo-alt me-1"></i> {{ publication.address }}</p>
+          <p class="mb-0"><i class="bi bi-telephone me-1"></i> {{ publication.phone }}</p>
+          <p><i class="bi bi-envelope-at me-1"></i> {{ publication.email }}</p>
+          <ul class="list-unstyled d-flex">
             {% for social in publication.socialmedia_set.all %}
-            <li><a href="{{ social.url }}" target="_blank"><i class="{{ social.icon }}"></i></a></li>
+            <li class="me-3">
+              <a class="link-body-emphasis" href="{{ social.url }}" target="_blank">
+                <i class="{{ social.icon }}"></i>
+              </a>
+            </li>
             {% endfor %}
           </ul>
         </div>
       </div>
+      <p class="py-4 my-2 border-top text-center">
+        © {% now 'Y' %} IFRN/SPP - <a href="https://github.com/IFRN-SPP/paca-cms" class="text-reset text-decoration-none">
+PacaCMS <i class="bi bi-github ms-1"></i>
+        </a>
+      </p>
     </div>
   </footer>
 
-  <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   <script src="{% static 'js/main.js'%}"></script>
 </body>
 </html>
