body class block

--- a/templates/dashboard/base.html
+++ b/templates/dashboard/base.html
@@ -40,7 +40,7 @@
   </head>
   <!--end::Head-->
   <!--begin::Body-->
-  <body class="layout-fixed sidebar-expand-lg bg-body-tertiary">
+  <body class="{% block body_class %}layout-fixed sidebar-expand-lg bg-body-tertiary{% endblock %}">
     <!--begin::App Wrapper-->
     {% block app_wrapper %}
       
