--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,17 +1,9 @@
-/* 
- * 1. Google Font
- */
-@import url(https://fonts.googleapis.com/css?family=Roboto:300,400,700);
-/* 
- * 2.0 Global Style
- */
 html {
   font-family: 'Roboto', sans-serif;
   font-size: 16px;
 }
 
 body {
-  color: #4e4e4e;
   font-family: 'Roboto', sans-serif;
   font-size: 16px;
   font-weight: 300;
@@ -56,16 +48,12 @@ h6 {
 }
 
 .section-title {
-  color: #313131;
   letter-spacing: 1px;
   margin: 0 0 20px;
   text-transform: uppercase;
   text-align: center;
 }
 
-/* 
- * 3.5 Helper Class: background
- */
 .bg-image {
   position: relative;
   z-index: 1;
@@ -91,45 +79,45 @@ h6 {
   }
 
   .section-title {
-    color: #313131;
     letter-spacing: 1px;
     margin: 0 0 20px;
     text-transform: uppercase;
     text-align: left;
   }
 }
-/* 
- * 4.0 Navigation
- */
+
 .navbar-custom {
+  background-color: rgb(var(--bs-dark-rgb));
   border: 0;
   margin: 0;
   min-height: 60px;
-  padding-top: 10px;
-  padding-bottom: 10px;
   transition: all 0.2s linear 0s;
 }
+
+body.index .navbar-custom {
+  background-color: transparent;
+  padding-top: 20px;
+  padding-bottom: 10px;
+}
+
 .navbar-custom .navbar-nav li {
   margin: 0;
 }
+
 .navbar-custom .navbar-nav > li > a {
   text-transform: uppercase;
   font-size: 12px;
   font-weight: 400;
   border-bottom: 1px solid transparent;
 }
+
 .navbar-custom .navbar-nav > li > a:focus, .navbar-custom .navbar-nav > li > a:hover {
   background-color: transparent;
   border-color: rgba(255, 255, 255, 0.5);
 }
+
 .navbar-custom .navbar-nav > .active > a {
   border-color: rgba(255, 255, 255, 0.5);
-}
-
-.navbar-solid {
-  background-color: rgba(0, 0, 0, 1) !important; /* Fundo semi-transparente para o efeito de vidro */
-  padding: 0 !important;
-  transition: all 0.2s linear;
 }
 
 .intro::before {
@@ -143,19 +131,12 @@ h6 {
   z-index: -1; /* Coloca o gradiente atrás do conteúdo */
 }
 
-.navbar-solid .portal-logo img{
-  height: 50px !important;
-}
-
 .site-branding {
   float: left;
   margin-top: 0;
   margin-left: 10px;
 }
 
-/* 
- * 5.0 Site Header
- */
 .site-header {
   width: 100%;
   height: 100%;
@@ -164,6 +145,7 @@ h6 {
   text-align: center;
   display: table;
 }
+
 .site-header::before {
   content: "";
   position: absolute;
@@ -173,6 +155,7 @@ h6 {
   left: 0;
   background-color: rgba(0, 0, 0, 0.5);
 }
+
 .site-header .intro {
   color: #fff;
   position: relative;
@@ -185,15 +168,18 @@ h6 {
   vertical-align: middle;
   height: 100vh;
 }
+
 .site-header .intro h2 {
   margin-top: 0px;
   font-size: 25px;
   font-weight: 300;
 }
+
 .site-header .intro h1 {
   margin-top: 0px;
   font-size: 30px;
 }
+
 .site-header .intro p {
   font-size: 20px;
   margin-bottom: 10px;
@@ -201,7 +187,7 @@ h6 {
 }
 
 @media (min-width: 768px) {
-  .navbar-custom {
+  body.index .navbar-custom {
     background-color: transparent;
     padding-top: 30px;
   }
@@ -218,10 +204,10 @@ h6 {
   transition: all 0.3s;
 }
 
-body.single-page {
-  padding-top: 4.5rem;
+.index .portal-logo img{
+  height: 50px !important;
 }
 
-body.single-page .navbar-custom{
-  background-color: rgba(0, 0, 0, 1) !important;
+body.single-page {
+  padding-top: 4.5rem;
 }
