--- a/templates/public/base.html
+++ b/templates/public/base.html
@@ -1,134 +1,126 @@
 {% load static i18n %}
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>{{ publication.short_title }} | {% block title %}Início{% endblock title %}</title>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>{{ publication.short_title }} | {% block title %}Início{% endblock title %}</title>
 
-{% if request.debug %}
-  <meta name="robots" content="noindex">
-{% endif %}
+    {% if request.debug %}
+    <meta name="robots" content="noindex">
+    {% endif %}
 
-{% if request.googletag %}
-  <script async src="https://www.googletagmanager.com/gtag/js?id={{ request.googletag }}"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
+    <!-- Google Fonts Roboto -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100..900&display=swap" rel="stylesheet">
 
-    gtag('config', '{{ request.googletag }}');
-  </script>
-{% endif %}
-  
-  <!-- Bootstrap -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <!-- Bootstrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
-  <!-- Google Font: Source Sans Pro -->
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700&display=fallback">
+    <!-- Bootstrap Icons -->
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
+      integrity="sha256-9kPW/n5nn53j4WMRYAxe9c1rCY96Oogo/MKSVdKzPmI="
+      crossorigin="anonymous"
+    />
 
-  <!-- Bootstrap Icons -->
-  <link
-    rel="stylesheet"
-    href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
-    integrity="sha256-9kPW/n5nn53j4WMRYAxe9c1rCY96Oogo/MKSVdKzPmI="
-    crossorigin="anonymous"
-  />
-  
-  {% block extrastyle %}{% endblock extrastyle %}
-    
-  <!-- Local -->
-  <link rel="stylesheet" href="{% static 'css/main.css' %}">
+    <!-- Local -->
+    <link rel="stylesheet" href="{% static 'css/main.css' %}">
 
-  {% if publication.logo_mini %}
+    <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+
+    <script defer src="{% static 'js/main.js'%}"></script>
+
+    {% block extrastyle %}{% endblock extrastyle %}
+
+    {% if publication.logo_mini %}
     <link rel="icon" type="image/png" href="{{ publication.logo_mini.url  }}">
-  {% endif %}
-  
+    {% endif %}
 
-  <meta name="description" content="{{ publication.description }}" />
-  <meta property="og:type" content="website" />
-  <meta property="og:title" content="{{ publication.title  }}" />
-  <meta property="og:url" content="{{ request.scheme }}://{{ request.get_host }}" />
-  <meta property="og:description" content="{{ publication.description }}" />
-  {% if publication.logo %}
-  <meta property="og:image" content="{{ request.scheme }}://{{ request.get_host }}{{ publication.logo.url }}" />
-  {% endif %}
-</head>
 
-<body class="d-flex flex-column min-vh-100 {% block bodyclass %}{% endblock bodyclass %}" >
-  <nav id="site-nav" class="navbar navbar-expand-md fixed-top navbar-custom" data-bs-theme="dark">
-    <div class="container">
-      <!-- logo -->
-      <div class="navbar-brand">
-        <a class="portal-logo text-reset text-decoration-none" href="{% url 'index' %}">
-          {% if publication.logo %}
-          <img src="{{ publication.logo.url }}" alt="Logo">
-          {% else %}
-          <h5>{{ publication.short_title }}</h5>
-          {% endif %}
-        </a>
-      </div>
-      <button class="navbar-toggler border border-0" type="button" data-bs-toggle="collapse" data-bs-target="#navbar-items" aria-controls="navbar-items" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbar-items">
-        <ul class="navbar-nav ms-auto">
-          <li class="nav-item text-end text-md-center px-md-0 px-3">
-            <a href="{% url 'index' %}" class="nav-link text-light">Início</a>
-          </li>
-          {% for page in publication.page_set.all %}
-          <li class="nav-item text-end text-md-center px-md-0 px-3">
-            <a href="{% url 'pages' page.slug %}" class="nav-link text-light">{{ page.title }}</a>
-          </li>
-          {% endfor %}
-        </ul>
-      </div>
-    </div>
-  </nav>
+    <meta name="description" content="{{ publication.description }}" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="{{ publication.title  }}" />
+    <meta property="og:url" content="{{ request.scheme }}://{{ request.get_host }}" />
+    <meta property="og:description" content="{{ publication.description }}" />
+    {% if publication.logo %}
+    <meta property="og:image" content="{{ request.scheme }}://{{ request.get_host }}{{ publication.logo.url }}" />
+    {% endif %}
+  </head>
 
-  {% block page_header %}
-  {% endblock %}
-
-  <main class="container flex-grow-1 d-flex align-items-center mb-2" role="main">
-  {% block content %}
-  {% endblock content %}
-  </main>
-
-  <footer class="pt-5 text-bg-dark mt-auto align-items-bottom" data-bs-theme="dark">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-4">
-          <p class="mb-0"><strong>{{ publication.title }}</strong></p>
-          <p class="mb-0">{{ publication.organization }}</p>
-          {% if publication.issn %}
-          <p><small>ISSN: {{ publication.issn }}</small></p>
-          {% endif %}
+  <body class="d-flex flex-column min-vh-100 {% block bodyclass %}{% endblock bodyclass %}" >
+    <nav id="site-nav" class="navbar navbar-expand-md fixed-top navbar-custom" data-bs-theme="dark">
+      <div class="container">
+        <!-- logo -->
+        <div class="navbar-brand">
+          <a class="portal-logo text-reset text-decoration-none" href="{% url 'index' %}">
+            {% if publication.logo %}
+            <img src="{{ publication.logo.url }}" alt="Logo">
+            {% else %}
+            <h5>{{ publication.short_title }}</h5>
+            {% endif %}
+          </a>
         </div>
-        <div class="col-md-5 ms-auto">
-          <p class="mb-0"><strong>Contato:</strong></p>
-          <p class="mb-0"><i class="bi bi-geo-alt me-1"></i> {{ publication.address }}</p>
-          <p class="mb-0"><i class="bi bi-telephone me-1"></i> {{ publication.phone }}</p>
-          <p><i class="bi bi-envelope-at me-1"></i> {{ publication.email }}</p>
-          <ul class="list-unstyled d-flex">
-            {% for social in publication.socialmedia_set.all %}
-            <li class="me-3">
-              <a class="link-body-emphasis" href="{{ social.url }}" target="_blank">
-                <i class="{{ social.icon }}"></i>
-              </a>
+        <button class="navbar-toggler border border-0" type="button" data-bs-toggle="collapse" data-bs-target="#navbar-items" aria-controls="navbar-items" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbar-items">
+          <ul class="navbar-nav ms-auto">
+            <li class="nav-item text-end text-md-center px-md-0 px-3">
+              <a href="{% url 'index' %}" class="nav-link text-light">Início</a>
+            </li>
+            {% for page in publication.page_set.all %}
+            <li class="nav-item text-end text-md-center px-md-0 px-3">
+              <a href="{% url 'pages' page.slug %}" class="nav-link text-light">{{ page.title }}</a>
             </li>
             {% endfor %}
           </ul>
         </div>
       </div>
-      <p class="py-4 my-2 border-top text-center">
-        © {% now 'Y' %} IFRN/SPP - <a href="https://github.com/IFRN-SPP/paca-cms" class="text-reset text-decoration-none">
-PacaCMS <i class="bi bi-github ms-1"></i>
-        </a>
-      </p>
-    </div>
-  </footer>
+    </nav>
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-  <script src="{% static 'js/main.js'%}"></script>
-</body>
+    {% block page_header %}
+    {% endblock %}
+
+    <main class="container flex-grow-1 d-flex mb-2" role="main">
+      {% block content %}
+      {% endblock content %}
+    </main>
+
+    <footer class="pt-5 text-bg-dark mt-auto align-items-bottom" data-bs-theme="dark">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-4">
+            <p class="mb-0"><strong>{{ publication.title }}</strong></p>
+            <p class="mb-0">{{ publication.organization }}</p>
+            {% if publication.issn %}
+            <p><small>ISSN: {{ publication.issn }}</small></p>
+            {% endif %}
+          </div>
+          <div class="col-md-5 ms-auto">
+            <p class="mb-0"><strong>Contato:</strong></p>
+            <p class="mb-0"><i class="bi bi-geo-alt me-1"></i> {{ publication.address }}</p>
+            <p class="mb-0"><i class="bi bi-telephone me-1"></i> {{ publication.phone }}</p>
+            <p><i class="bi bi-envelope-at me-1"></i> {{ publication.email }}</p>
+            <ul class="list-unstyled d-flex">
+              {% for social in publication.socialmedia_set.all %}
+              <li class="me-3">
+                <a class="link-body-emphasis" href="{{ social.url }}" target="_blank">
+                  <i class="{{ social.icon }}"></i>
+                </a>
+              </li>
+              {% endfor %}
+            </ul>
+          </div>
+        </div>
+        <p class="py-4 my-2 border-top text-center">
+        © {% now 'Y' %} IFRN/SPP - <a href="https://github.com/IFRN-SPP/paca-cms" class="text-reset text-decoration-none">
+          PacaCMS <i class="bi bi-github ms-1"></i>
+        </a>
+        </p>
+      </div>
+    </footer>
+  </body>
 </html>
