--- a/templates/dashboard/includes/sidebar.html
+++ b/templates/dashboard/includes/sidebar.html
@@ -27,7 +27,7 @@
         data-accordion="false"
       >
         <li class="nav-item">
-          <a href="{% url 'dashboard' %}" class="nav-link">
+          <a href="{% url 'dashboard:index' %}" class="nav-link">
             <i class="nav-icon bi bi-house-fill"></i>
             <p>
               Início
@@ -35,7 +35,7 @@
           </a>
         </li>
         <li class="nav-item">
-          <a href="#" class="nav-link">
+          <a href="{% url 'dashboard:publication' %}" class="nav-link">
             <i class="nav-icon bi bi-journals"></i>
             <p>
               Publicação
@@ -44,7 +44,7 @@
           </a>
         </li>
         <li class="nav-item">
-          <a href="#" class="nav-link">
+          <a href="{% url 'dashboard:issues' %}" class="nav-link">
             <i class="nav-icon bi bi-files"></i>
             <p>
               Edições
@@ -53,19 +53,19 @@
           </a>
         </li>
         <li class="nav-item">
-          <a href="#" class="nav-link">
+          <a href="{% url 'dashboard:pages' %}" class="nav-link">
             <i class="nav-icon bi bi-hand-index-thumb"></i>
             <p>Páginas</p>
           </a>
         </li>
         <li class="nav-item">
-          <a href="#" class="nav-link">
+          <a href="{% url 'dashboard:documents' %}" class="nav-link">
             <i class="nav-icon bi bi-file-earmark-arrow-up-fill"></i>
             <p>Documentos</p>
           </a>
         </li>
         <li class="nav-item">
-          <a href="#" class="nav-link">
+          <a href="{% url 'dashboard:users' %}" class="nav-link">
             <i class="nav-icon bi bi-people-fill"></i>
             <p>Usuários</p>
           </a>
