--- a/templates/allauth/layouts/base.html
+++ b/templates/allauth/layouts/base.html
@@ -10,7 +10,7 @@
 {% block app_wrapper %}
 <div class="login-box">
   <div class="login-logo">
-    <a href="{% url 'dashboard' %}"><strong>Paca</strong>CMS</a>
+    <a href="{% url 'dashboard:index' %}"><strong>Paca</strong>CMS</a>
   </div>
   <div class="card">
     <div class="card-body login-card-body">
