--- a/templates/dashboard/includes/documents_table.html
+++ b/templates/dashboard/includes/documents_table.html
@@ -14,14 +14,10 @@
     <tr class="align-middle">
       <td>{{ document.id }}</td>
       <td>{{ document.title }}</td>
-      <td> {{ document.created_at|date }} </td>
-      <td> {{ document.updated_at|date }} </td>
+      <td>{{ document.created_at|date }}</td>
+      <td>{{ document.updated_at|date }}</td>
       <td>{{ document.is_published | yesno:"Sim,Não," }}</td>
-      <td class="text-nowrap">
-        <a href="{% url 'dashboard:documents_detail' document.id %}" class="btn btn-primary"><i class="bi bi-eye-fill"></i></a>
-        <a href="{% url 'dashboard:documents_update' document.id %}" class="btn btn-secondary"><i class="bi bi-pencil-fill"></i></a>
-        <a href="{% url 'dashboard:documents_delete' document.id %}" class="btn btn-danger"><i class="bi bi-trash-fill"></i></a>
-      </td>
+      {% include "dashboard/includes/actions.html" with obj=document %}
     </tr>
     {% endfor %}
   </tbody>
