--- a/templates/dashboard/detail.html
+++ b/templates/dashboard/detail.html
@@ -1,9 +1,9 @@
-{% extends "dashboard/private_base.html" %}
+{% extends "dashboard/list.html" %}
 
 {% block crumb %}
 {{ block.super }}
 <li class="breadcrumb-item">
-  <a href="{% url 'dashboard:publication_detail' %}">{{page_title}}</a>
+  <a href="{{ request.get_full_path }}">{{page_title}}</a>
 </li>
 {% endblock %}
 
@@ -25,8 +25,13 @@
   </div>
 
   <div class="d-flex justify-content-between mt-3">
-    <a href="{% url 'dashboard:index' %}" class="btn btn-secondary">Voltar</a>
-    <a href="{% url 'dashboard:publication_change' %}" class="btn btn-primary" role="button">Atualizar</a>
+    <a href="{% url allowed_actions.list %}" class="btn btn-secondary">Voltar</a>
+    {% if "delete" in allowed_actions %}
+    <a href="{% url allowed_actions.delete object.id %}" class="btn btn-danger">Remover</a>
+    {% endif %}
+    {% if "change" in allowed_actions %}
+    <a href="{% url allowed_actions.change object.id %}" class="btn btn-primary" role="button">Atualizar</a>
+    {% endif %}
   </div>
 </div>
 {% endblock %}
