--- a/templates/dashboard/includes/sidebar.html
+++ b/templates/dashboard/includes/sidebar.html
@@ -36,7 +36,7 @@
         </li>
         {% if perms.dashboard.view_publication %}
         <li class="nav-item">
-          <a href="{% url 'dashboard:publication' %}" class="nav-link">
+          <a href="{% url 'dashboard:publication_detail' %}" class="nav-link">
             <i class="nav-icon bi bi-journals"></i>
             <p>
               Publicação
@@ -46,7 +46,7 @@
         {% endif %}
         {% if perms.dashboard.view_issue %}
         <li class="nav-item">
-          <a href="{% url 'dashboard:issues' %}" class="nav-link">
+          <a href="{% url 'dashboard:issue_list' %}" class="nav-link">
             <i class="nav-icon bi bi-files"></i>
             <p>
               Edições
@@ -56,7 +56,7 @@
         {% endif %}
         {% if perms.dashboard.view_page %}
         <li class="nav-item">
-          <a href="{% url 'dashboard:pages' %}" class="nav-link">
+          <a href="{% url 'dashboard:page_list' %}" class="nav-link">
             <i class="nav-icon bi bi-hand-index-thumb"></i>
             <p>Páginas</p>
           </a>
@@ -64,7 +64,7 @@
         {% endif %}
         {% if perms.dashboard.view_document %}
         <li class="nav-item">
-          <a href="{% url 'dashboard:documents' %}" class="nav-link">
+          <a href="{% url 'dashboard:document_list' %}" class="nav-link">
             <i class="nav-icon bi bi-file-earmark-arrow-up-fill"></i>
             <p>Documentos</p>
           </a>
@@ -72,7 +72,7 @@
         {% endif %}
         {% if perms.dashboard.view_user %}
         <li class="nav-item">
-          <a href="{% url 'dashboard:users' %}" class="nav-link">
+          <a href="{% url 'dashboard:user_list' %}" class="nav-link">
             <i class="nav-icon bi bi-people-fill"></i>
             <p>Usuários</p>
           </a>
