perfil de usuario

--- a/templates/dashboard/private_base.html
+++ b/templates/dashboard/private_base.html
@@ -35,7 +35,7 @@
             />
           </a>
           <ul class="dropdown-menu dropdown-menu-md dropdown-menu-end w-75">
-            <li><a class="dropdown-item" href="#">
+            <li><a class="dropdown-item" href="{% url 'dashboard:user_profile' %}">
               <i class="bi bi-person-fill me-2"></i>
                 Perfil</a></li>
             <li><a class="dropdown-item" href="{% url 'account_email' %}">
