--- a/app/templates/base_page.html
+++ b/app/templates/base_page.html
@@ -10,7 +10,7 @@
 {% endblock %}
 
 {% block content %}
-<section class="container">
+<section class="container pb-4">
   <div class="row">
     <div class="col-md-12">
       {% block page_content %}
